# kulturlabor-10-niklas

./: .gitignore  CODE_OF_CONDUCT.md  FillamentLog.xlsx  README.md  treeView.xmi
.github/ISSUE_TEMPLATE/: bug-report.md
concept/classes/: Logic.md  States.md
cpp/: disp_test.cpp  main.cpp
docs/: Info.md  polynomial_function.md
docs/classes/: States.md
esp32/: CMakeLists.txt
esp32/lib/DiciplineScreen/: DiciplineScreen.cpp
esp32/lib/IconsBar/: IconsBar.hpp
esp32/lib/ImageFormat/: ImageFormat.hpp
esp32/lib/MedicineScreen/: MedicineScreen.cpp  MedicineScreen.hpp
esp32/lib/PlayScreen/: PlayScreen.cpp
esp32/lib/PoopScreen/: PoopScreen.cpp
esp32/lib/ProgressBar/: ProgressBar.hpp
esp32/lib/Renderables/DisplayBitmap/: DisplayBitmap.cpp
esp32/lib/Renderables/MainMenuIcons/: MainMenuIcons.hpp
esp32/lib/Renderables/SubScreenOptions/: SubScreenOptions.hpp
esp32/lib/SettingsScreen/: SettingsScreen.hpp
esp32/lib/StatsScreen/: StatsScreen.cpp
esp32/lib/TamaStatus/: TamaStatus.cpp
esp32/lib/Timeable/: Timeable.cpp
esp32/lib/UserInput/: UserInput.cpp  UserInput.hpp
esp32/lib/Vector2/: Vector2.cpp
markdown/: Info.md
platformio/Tamagotchi32/: Mermaid.md  countChars.py  platformio.ini  presentation.md  screenOrder.md
platformio/Tamagotchi32/src/: main.cpp
platformio/Tamagotchi32/test/: SerialPrintln.cpp
platformio/tamagotchi/: platformio.ini
platformio/tamagotchi/include/: Display.hpp
platformio/tamagotchi/lib/: README
platformio/tamagotchi/src/: main.cpp
py/: main.py  main_micro.py
py/classes/: Logic.py  States.py  UI.py
(+143 files in other folders)
